# projekt

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
AlN/band/: AlN.bands.dat.gnu  AlN.bands.dat.rap  AlN_band.in  band.in  job_band  job_qe  slurm-4464457.out  slurm-4464459.out
AlN/input/: AlNRocksalt_scf.in
AlN/nscf/: AlN_ncsf.in  job_qe
AlN/output/AlN.save/: charge-density.hdf5  data-file-schema.xml  paw.txt
AlN/output/band/: AlN.bands.dat.gnu  AlN.bands.dat.rap  AlN_band.out  AlN_band_nscf.out  AlN_bands_post.out  AlN_scfinfile.out
AlN/output/cutoff/: AlN_scf_cutoffsmearing180.out  AlN_scf_cutoffsmearing20.out  AlN_scf_cutoffsmearing220.out  AlN_scf_cutoffsmearing30.out  AlN_scf_cutoffsmearing400.out  AlN_scf_cutoffsmearing50.out  AlN_scf_cutoffsmearing60.out  AlN_scf_cutoffsmearing80.out
AlN/output/nscf/: AlN_nscfkpoint30.out
AlN/relax/: AlN_relax.in  AlN_scf.in  job_qe  slurm-4456196.out
AlN/scf/: AlN_scf.in  AlN_scfrelaxed.in  job_qe  slurm-4463697.out
TiAlN/input/: .job_qe.swp  TiAlN_scf2.in
TiAlN/output/: TiAlN.bfgs  TiAlN.update  TiAlN.xml
TiAlN/relax/: TiAlN_relax-2-2-2.in  TiAlN_relax-gamma.in  TiAlN_relax.in  job_qerelax  job_qerelax-2-2-2  job_relax-gamma
TiAlN/scf/: TiAlN_scf.in  job_qescf  slurm-4465820.out
TiN/job/: job_TiN_scf.sh
TiN/output/: TiN_scf_cutoff120.out  TiN_scf_cutoff180.out  TiN_scf_cutoff60.out  TiN_scf_cutoff80.out
TiN/scf/: job_qe
legacy/TiN-legacy-oscar/: TiN-materialproject-data.txt
tests/unit/: test_quantum_espresso_output.py  test_spinodal_functions.py  test_thermodynamics.py
(+442 files in other folders)
